# ci-dependencies

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  build.sh  build_all.sh  build_boost.sh  build_parallel.sh  build_root.sh  build_tbb.sh  build_xercesc.sh  dd4hep-python.patch  dependencies.sh  opengl.sh  pythia8-forward-decl.patch  retry.sh  setup.sh.in  spack.rb  spack.yaml
.github/workflows/: build.yml  build_cmake.yml  build_spack.yml  cmake.yml  common.yml  macos.yml  macos_cmake.yml  spack.yml
dd4hep/: CMakeLists.txt
edm4hep/: CMakeLists.txt
geant4/: CMakeLists.txt
podio/: CMakeLists.txt
python/: CMakeLists.txt
root/: CMakeLists.txt
tbb/: CMakeLists.txt
xercesc/: CMakeLists.txt
