set(DD4HEP_VERSION "01-21")

set(DD4HEP_URL https://github.com/AIDASoft/DD4hep/archive/refs/tags/v${DD4HEP_VERSION}.tar.gz)
set(DD4HEP_HASH "e379a16a29d5949722e606f806617fcba947e678")

set(prefix_path "${ROOT_INSTALL_PATH};${PYTHON_INSTALL_PATH};${PODIO_INSTALL_PATH};${EDM4HEP_INSTALL_PATH}")

find_program(python_exe NAMES python3 python PATHS ${PYTHON_INSTALL_PATH}/bin NO_DEFAULT_PATH)


ExternalProject_Add(dd4hep
  URL ${DD4HEP_URL}
  URL_HASH SHA1=${DD4HEP_HASH}
  CMAKE_CACHE_ARGS
  INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/install
  CMAKE_CACHE_ARGS
  -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
  -DCMAKE_PREFIX_PATH:PATH=${prefix_path}
  -DCMAKE_CXX_STANDARD:STRING=17
  -DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
  -DCMAKE_CXX_COMPILER_LAUNCHER:STRING=${CMAKE_CXX_COMPILER_LAUNCHER}
  -DPython3_EXECUTABLE:PATH=${python_exe}
  -DPython_EXECUTABLE:PATH=${python_exe}
  -DDD4HEP_USE_GEANT4:BOOL=ON
  -DDD4HEP_USE_EDM4HEP:BOOL=ON
  -DDD4HEP_IGNORE_GEANT4_TLS:BOOL=ON
  -DBUILD_DOCS:BOOL=OFF
  DOWNLOAD_EXTRACT_TIMESTAMP ON
  DEPENDS root;python;edm4hep;geant4
)

install( DIRECTORY "${INSTALL_DIR}/" DESTINATION .)

