
set(GEANT4_VERSION "11.0.0")

set(GEANT4_URL https://github.com/Geant4/geant4/archive/v${GEANT4_VERSION}.tar.gz)
set(GEANT4_HASH "e8a0e82432b02a4d90c6555b6acead2da8c69874")


ExternalProject_Add(geant4
  URL ${GEANT4_URL}
  URL_HASH SHA1=${GEANT4_HASH}
  CMAKE_CACHE_ARGS
  INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/install
  CMAKE_CACHE_ARGS
  -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
  -DCMAKE_CXX_STANDARD:STRING=${CMAKE_CXX_STANDARD}
  -DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
  -DCMAKE_CXX_COMPILER_LAUNCHER:STRING=${CMAKE_CXX_COMPILER_LAUNCHER}
  -DGEANT4_USE_GDML:PATH=ON
  -DGEANT4_BUILD_CXXSTD:STRING=17
  DOWNLOAD_EXTRACT_TIMESTAMP ON
)

ExternalProject_Get_property(geant4 INSTALL_DIR)

set(GEANT4_INSTALL_PATH ${INSTALL_DIR} PARENT_SCOPE)

install( DIRECTORY "${INSTALL_DIR}/" DESTINATION .)

