
set(PODIO_VERSION "v00-14-01")

set(PODIO_URL https://github.com/AIDASoft/podio/archive/refs/tags/${PODIO_VERSION}.tar.gz)
set(PODIO_HASH "a031de06d0a80a68160bb8077b540d7c3d954f01")

set(prefix_path "${ROOT_INSTALL_PATH};${PYTHON_INSTALL_PATH}")

find_program(python_exe NAMES python3 python PATHS ${PYTHON_INSTALL_PATH}/bin NO_DEFAULT_PATH)


ExternalProject_Add(podio
  URL ${PODIO_URL}
  URL_HASH SHA1=${PODIO_HASH}
  CMAKE_CACHE_ARGS
  INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/install
  CMAKE_CACHE_ARGS
  -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
  -DCMAKE_PREFIX_PATH:PATH=${prefix_path}
  -DCMAKE_CXX_STANDARD:STRING=${CMAKE_CXX_STANDARD}
  -DCMAKE_BUILD_TYPE:STRING=${CMAKE_BUILD_TYPE}
  -DCMAKE_CXX_COMPILER_LAUNCHER:STRING=${CMAKE_CXX_COMPILER_LAUNCHER}
  -DPYTHON_EXECUTABLE:PATH=${python_exe}
  -DBUILD_TESTING:BOOL=OFF
  DOWNLOAD_EXTRACT_TIMESTAMP ON
  DEPENDS root;python
)

ExternalProject_Get_property(podio INSTALL_DIR)

set(PODIO_INSTALL_PATH ${INSTALL_DIR} PARENT_SCOPE)

install( DIRECTORY "${INSTALL_DIR}/" DESTINATION .)

